--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,6 +6,114 @@
     android:layout_height="match_parent"
     android:background="@drawable/simplebg">
 
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="105dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/jua"
+        android:text="HISTORY"
+        android:textAlignment="center"
+        android:textColor="#825C03"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.232"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.427" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="105dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/jua"
+        android:text="username"
+        android:textAlignment="center"
+        android:textColor="#825C03"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.575"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.237" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="105dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/jua"
+        android:text="username"
+        android:textAlignment="center"
+        android:textColor="#825C03"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.575"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.237" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="47dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/jua"
+        android:text="bio"
+        android:textAlignment="center"
+        android:textColor="#825C03"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285" />
+
+    <EditText
+        android:id="@+id/roundedEditText11"
+        android:layout_width="269dp"
+        android:layout_height="61dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_edittext_background"
+        android:hint="entry 1"
+        android:inputType="text"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.513" />
+
+    <EditText
+        android:id="@+id/roundedEditText12"
+        android:layout_width="269dp"
+        android:layout_height="61dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_edittext_background"
+        android:hint="entry 2"
+        android:inputType="text"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.619" />
+
+    <EditText
+        android:id="@+id/roundedEditText15"
+        android:layout_width="269dp"
+        android:layout_height="61dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_edittext_background"
+        android:hint="entry 3"
+        android:inputType="text"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.722" />
+
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="293dp"
