added new functionalities
added new functionalities 11-23-23

--- a/app/src/main/res/layout/activity_creatediary.xml
+++ b/app/src/main/res/layout/activity_creatediary.xml
@@ -77,7 +77,7 @@
         app:layout_constraintHorizontal_bias="0.595"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.766"
+        app:layout_constraintVertical_bias="0.855"
         app:srcCompat="@drawable/back" />
 
     <ImageButton
@@ -97,8 +97,8 @@
 
     <ImageButton
         android:id="@+id/imageButton11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="223dp"
+        android:layout_height="78dp"
         android:backgroundTint="#00FFFFFF"
         android:contentDescription="save"
         android:onClick="redirectToHomePage2"
@@ -107,7 +107,7 @@
         app:layout_constraintHorizontal_bias="0.595"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.864"
+        app:layout_constraintVertical_bias="0.757"
         app:srcCompat="@drawable/save" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
