--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,44 +7,28 @@
     android:background="@drawable/simplebg">
 
     <TextView
-        android:id="@+id/textView18"
-        android:layout_width="187dp"
-        android:layout_height="31dp"
-        android:fontFamily="@font/jua"
-        android:text="contact number"
-        android:textAlignment="viewStart"
-        android:textColor="#825C03"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.325"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.768" />
-
-    <TextView
         android:id="@+id/textView17"
-        android:layout_width="132dp"
-        android:layout_height="34dp"
+        android:layout_width="251dp"
+        android:layout_height="32dp"
         android:fontFamily="@font/jua"
-        android:text="birthdate"
+        android:text="re-enter password"
         android:textAlignment="viewStart"
         android:textColor="#825C03"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.261"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txtConfirmPass"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.644" />
+        app:layout_constraintVertical_bias="0.642" />
 
     <EditText
-        android:id="@+id/roundedEditText13"
+        android:id="@+id/txtConfirmPass"
         android:layout_width="269dp"
         android:layout_height="61dp"
         android:layout_margin="16dp"
         android:background="@drawable/rounded_edittext_background"
-        android:hint="birthdate"
+        android:hint="password again"
         android:inputType="text"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,45 +38,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.722" />
 
-    <EditText
-        android:id="@+id/roundedEditText14"
-        android:layout_width="269dp"
-        android:layout_height="61dp"
-        android:layout_margin="16dp"
-        android:background="@drawable/rounded_edittext_background"
-        android:hint="contact number"
-        android:inputType="text"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.861" />
-
     <TextView
         android:id="@+id/textView14"
         android:layout_width="132dp"
         android:layout_height="34dp"
         android:fontFamily="@font/jua"
-        android:text="age"
+        android:text="password"
         android:textAlignment="viewStart"
         android:textColor="#825C03"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.261"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txtPassword"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.512" />
+        app:layout_constraintVertical_bias="0.516" />
 
     <EditText
-        android:id="@+id/roundedEditText10"
+        android:id="@+id/txtPassword"
         android:layout_width="269dp"
         android:layout_height="61dp"
         android:layout_margin="16dp"
         android:background="@drawable/rounded_edittext_background"
-        android:hint="age"
+        android:hint="password"
         android:inputType="text"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +71,7 @@
         app:layout_constraintVertical_bias="0.583" />
 
     <ImageButton
-        android:id="@+id/imageButton14"
+        android:id="@+id/btnRegisterUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#00FFFFFF"
@@ -111,19 +79,19 @@
         android:onClick="redirectToLogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.373"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.96"
+        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass"
+        app:layout_constraintVertical_bias="0.508"
         app:srcCompat="@drawable/register" />
 
     <EditText
-        android:id="@+id/roundedEditText3"
+        android:id="@+id/txtUsername"
         android:layout_width="269dp"
         android:layout_height="61dp"
         android:layout_margin="16dp"
         android:background="@drawable/rounded_edittext_background"
-        android:hint="firstname"
+        android:hint="username"
         android:inputType="text"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -138,39 +106,39 @@
         android:layout_width="129dp"
         android:layout_height="28dp"
         android:fontFamily="@font/jua"
-        android:text="firstname"
+        android:text="username"
         android:textColor="#825C03"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.258"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.014"
+        app:layout_constraintStart_toStartOf="@+id/txtUsername"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.243" />
+        app:layout_constraintVertical_bias="0.253" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="132dp"
         android:layout_height="34dp"
         android:fontFamily="@font/jua"
-        android:text="lastname"
+        android:text="birthday"
         android:textAlignment="textStart"
         android:textColor="#825C03"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.258"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txtBirthday"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.389" />
+        app:layout_constraintVertical_bias="0.383" />
 
     <EditText
-        android:id="@+id/roundedEditText9"
+        android:id="@+id/txtBirthday"
         android:layout_width="269dp"
         android:layout_height="61dp"
         android:layout_margin="16dp"
         android:background="@drawable/rounded_edittext_background"
-        android:hint="lastname"
+        android:hint="birthday"
         android:inputType="text"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -191,19 +159,4 @@
         app:layout_constraintVertical_bias="0.083"
         app:srcCompat="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="137dp"
-        android:layout_height="30dp"
-        android:fontFamily="@font/jua"
-        android:text="register"
-        android:textAlignment="center"
-        android:textColor="#825C03"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.189" />
 </androidx.constraintlayout.widget.ConstraintLayout>
