--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -45,10 +45,9 @@
             android:backgroundTint="#00FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/roundedEditText4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.873"
+            app:layout_constraintVertical_bias="0.741"
             app:srcCompat="@drawable/upload" />
 
         <EditText
@@ -62,37 +61,55 @@
             android:padding="10dp"
             app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.485"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.973" />
+            app:layout_constraintVertical_bias="0.776" />
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="588dp"
-            android:backgroundTint="#00FFFFFF"
-            android:contentDescription="save profile"
-            android:onClick="redirectToHomePage2"
+        <EditText
+            android:id="@+id/roundedEditText"
+            android:layout_width="269dp"
+            android:layout_height="61dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:hint="name"
+            android:inputType="text"
+            android:padding="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/saveprof" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="112dp"
             android:layout_height="34dp"
-            android:layout_marginEnd="180dp"
+            android:layout_marginEnd="156dp"
             android:fontFamily="@font/jua"
-            android:text="email"
+            android:text="old email"
             android:textAlignment="center"
             android:textColor="#825C03"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/roundedEditText4"
             app:layout_constraintEnd_toEndOf="@+id/roundedEditText4"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="112dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="428dp"
+            android:fontFamily="@font/jua"
+            android:text="new email"
+            android:textAlignment="center"
+            android:textColor="#825C03"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/roundedEditText"
+            app:layout_constraintEnd_toEndOf="@+id/roundedEditText"
+            app:layout_constraintHorizontal_bias="0.018"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
@@ -110,5 +127,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/back" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="616dp"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="save profile"
+            android:onClick="redirectToHomePage2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/saveprof" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
