--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
                 app:layout_constraintVertical_bias="0.76" />
 
             <EditText
+                android:fontFamily="@font/jua"
                 android:id="@+id/txtUsername"
                 android:layout_width="269dp"
                 android:layout_height="61dp"
@@ -70,6 +71,7 @@
                 app:layout_constraintVertical_bias="0.92" />
 
             <EditText
+                android:fontFamily="@font/jua"
                 android:id="@+id/txtPassword"
                 android:layout_width="269dp"
                 android:layout_height="61dp"
