--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <EditText
+            android:fontFamily="@font/jua"
             android:id="@+id/txtUsername"
             android:layout_width="269dp"
             android:layout_height="61dp"
@@ -72,6 +73,7 @@
             app:layout_constraintVertical_bias="0.985" />
 
         <EditText
+            android:fontFamily="@font/jua"
             android:id="@+id/txtConfirmPass"
             android:layout_width="269dp"
             android:layout_height="61dp"
@@ -102,6 +104,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <EditText
+            android:fontFamily="@font/jua"
             android:id="@+id/txtPassword"
             android:layout_width="269dp"
             android:layout_height="61dp"
