changes in layout only
changes in layout only 12-14

--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -56,9 +56,10 @@
             android:layout_height="61dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_edittext_background"
-            android:hint="name"
-            android:inputType="text"
-            android:padding="10dp"
+            android:fontFamily="@font/jua"
+            android:hint="password"
+            android:inputType="textPassword"
+            android:paddingLeft="24dp"
             app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +72,10 @@
             android:layout_height="61dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_edittext_background"
-            android:hint="name"
-            android:inputType="text"
-            android:padding="10dp"
+            android:fontFamily="@font/jua"
+            android:hint="new password"
+            android:inputType="textPassword"
+            android:paddingLeft="24dp"
             app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +88,7 @@
             android:layout_height="34dp"
             android:layout_marginEnd="156dp"
             android:fontFamily="@font/jua"
-            android:text="old email"
+            android:text="password"
             android:textAlignment="center"
             android:textColor="#825C03"
             android:textSize="25sp"
@@ -97,21 +99,17 @@
 
         <TextView
             android:id="@+id/textView13"
-            android:layout_width="112dp"
-            android:layout_height="34dp"
-            android:layout_marginStart="68dp"
-            android:layout_marginTop="428dp"
+            android:layout_width="169dp"
+            android:layout_height="36dp"
             android:fontFamily="@font/jua"
-            android:text="new email"
+            android:text="new password"
             android:textAlignment="center"
             android:textColor="#825C03"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/roundedEditText"
             app:layout_constraintEnd_toEndOf="@+id/roundedEditText"
-            app:layout_constraintHorizontal_bias="0.018"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="0.01"
+            app:layout_constraintStart_toStartOf="@+id/roundedEditText" />
 
         <ImageButton
             android:id="@+id/imageButton3"
