--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,15 +55,15 @@
                 app:layout_constraintVertical_bias="0.76" />
 
             <EditText
-                android:fontFamily="@font/jua"
                 android:id="@+id/txtUsername"
                 android:layout_width="269dp"
                 android:layout_height="61dp"
                 android:layout_margin="16dp"
                 android:background="@drawable/rounded_edittext_background"
+                android:fontFamily="@font/jua"
                 android:hint="username"
                 android:inputType="text"
-                android:padding="10dp"
+                android:paddingLeft="24dp"
                 app:layout_constraintBottom_toTopOf="@+id/txtPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,15 +71,15 @@
                 app:layout_constraintVertical_bias="0.92" />
 
             <EditText
-                android:fontFamily="@font/jua"
                 android:id="@+id/txtPassword"
                 android:layout_width="269dp"
                 android:layout_height="61dp"
                 android:layout_margin="16dp"
                 android:background="@drawable/rounded_edittext_background"
+                android:fontFamily="@font/jua"
                 android:hint="password"
-                android:inputType="text"
-                android:padding="10dp"
+                android:inputType="textPassword"
+                android:paddingLeft="24dp"
                 app:layout_constraintBottom_toTopOf="@+id/btnLoginUser"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,35 +88,31 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="108dp"
-                android:layout_height="41dp"
+                android:layout_width="98dp"
+                android:layout_height="33dp"
                 android:fontFamily="@font/jua"
                 android:text="email"
                 android:textAlignment="center"
                 android:textColor="#825C03"
                 android:textSize="25sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtUsername"
                 app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/txtUsername"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.517" />
+                app:layout_constraintStart_toStartOf="@+id/txtUsername" />
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="143dp"
-                android:layout_height="52dp"
+                android:layout_width="146dp"
+                android:layout_height="35dp"
                 android:fontFamily="@font/jua"
                 android:text="password"
                 android:textAlignment="center"
                 android:textColor="#825C03"
                 android:textSize="25sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtPassword"
                 app:layout_constraintEnd_toEndOf="@+id/txtPassword"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/txtPassword"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.69" />
+                app:layout_constraintStart_toStartOf="@+id/txtPassword" />
 
             <ImageButton
                 android:id="@+id/btnLoginUser"
