--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,16 +11,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="back"
+            android:onClick="redirectToHomePage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnRegisterUser"
+            app:srcCompat="@drawable/back" />
+
         <EditText
-            android:fontFamily="@font/jua"
             android:id="@+id/txtUsername"
             android:layout_width="269dp"
             android:layout_height="61dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/jua"
             android:hint="username"
-            android:inputType="text"
-            android:padding="10dp"
+            android:inputType="textPassword"
+            android:paddingLeft="24dp"
             app:layout_constraintBottom_toTopOf="@+id/txtPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.514"
@@ -51,10 +64,10 @@
             android:onClick="redirectToLogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass"
-            app:layout_constraintVertical_bias="0.476"
+            app:layout_constraintVertical_bias="0.214"
             app:srcCompat="@drawable/register" />
 
         <TextView
@@ -70,23 +83,23 @@
             app:layout_constraintBottom_toTopOf="@+id/txtConfirmPass"
             app:layout_constraintEnd_toEndOf="@+id/txtConfirmPass"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.985" />
+            app:layout_constraintVertical_bias="0.961" />
 
         <EditText
-            android:fontFamily="@font/jua"
             android:id="@+id/txtConfirmPass"
             android:layout_width="269dp"
             android:layout_height="61dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/jua"
             android:hint="password again"
-            android:inputType="text"
-            android:padding="10dp"
+            android:inputType="textPassword"
+            android:paddingLeft="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.805" />
+            app:layout_constraintVertical_bias="0.717" />
 
         <TextView
             android:id="@+id/textView14"
@@ -104,16 +117,16 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <EditText
-            android:fontFamily="@font/jua"
             android:id="@+id/txtPassword"
             android:layout_width="269dp"
             android:layout_height="61dp"
             android:layout_margin="16dp"
             android:layout_marginTop="332dp"
             android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/jua"
             android:hint="password"
             android:inputType="text"
-            android:padding="10dp"
+            android:paddingLeft="24dp"
             app:layout_constraintBottom_toTopOf="@+id/txtConfirmPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.507"
